Move snake according to user key presses

--- a/snake-elm/index.html
+++ b/snake-elm/index.html
@@ -9,6 +9,7 @@
 function load()
 {
     Elm.fullscreen( Elm.Main );
+    document.getElementsByClassName( "main_div" )[0].focus()
 }
 </script>
 </head>
