--- a/snake-elm/index.html
+++ b/snake-elm/index.html
@@ -8,7 +8,7 @@
 <script type="text/javascript">
 function load()
 {
-    Elm.fullscreen( Elm.Main );
+    Elm.fullscreen( Elm.Main, { startTime: Date.now() } );
     document.getElementsByClassName( "main_div" )[0].focus()
 }
 </script>
