Set canvas height

--- a/snake-kotlinjs/index.html
+++ b/snake-kotlinjs/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
 
-    <canvas id="snake-canvas"></canvas>
+    <canvas height="400" width="400" id="snake-canvas"></canvas>
 
     <script type="text/javascript" src="web/kotlin.js"></script>
     <script type="text/javascript" src="web/snake-kotlinjs.js"></script>
