--- a/snake-kotlinjs/index.html
+++ b/snake-kotlinjs/index.html
@@ -2,6 +2,7 @@
     <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link href="style.css" rel="stylesheet" type="text/css">
         <title>Snake in KotlinJS</title>
     </head>
     <body>
